--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "contao/core-bundle": "^4.4.0"
+        "contao/core-bundle": "^4.4.0",
+        "doctrine/dbal": "^2.11 || ^3.3"
     },
     "extra": {
         "contao-manager-plugin": "Qbus\\WrapperRelationBundle\\ContaoManager\\Plugin"
