--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,7 @@
     ],
     "require": {
         "php": ">=5.6.0",
-        "contao/core-bundle": "^4.4.0",
+        "contao/core-bundle": "^4.4 || ^5.3",
         "doctrine/dbal": "^2.11 || ^3.3"
     },
     "extra": {
